# MovieTranslatorApp

./: CMakeLists.txt  README.md
include/: GLutil.hpp  arg_parser.hpp  audio_player.hpp  button.hpp  decoder.hpp  preferences.hpp  renderer.hpp  shader.hpp  subtitleUtil.hpp  subtitle_decoder.hpp  texture_atlas.hpp  thread.hpp  utility.hpp  variables.hpp  video_decoder.hpp  video_player.hpp
include/GL/: button.hpp  renderer.hpp  shader.hpp  texture_atlas.hpp
include/audio/: audio_player.hpp
include/subtitles/: subtitle_decoder.hpp
include/user/: preferences.hpp
include/utility/: GLutil.hpp  subtitleUtil.hpp  utility.hpp
include/video_player/: display.hpp  video_decoder.hpp  video_player.hpp
resources/textures/data/: languageselect.json  settingsmenu.json
shaders/: fill_overlay.frag  font_shader.frag  font_shader.vert  overlay.frag  overlay.vert  video_shader.frag  video_shader.vert
source/: GLutil.cpp  audio_player.cpp  button.cpp  main.cpp  preferences.cpp  renderer.cpp  shader.cpp  subtitleUtil.cpp  subtitle_decoder.cpp  texture_atlas.cpp  utility.cpp  variables.cpp  video_decoder.cpp  video_player.cpp
source/GL/: button.cpp  renderer.cpp  shader.cpp  texture_atlas.cpp
source/audio/: audio_player.cpp
source/subtitles/: subtitle_decoder.cpp
source/user/: preferences.cpp
source/utility/: GLutil.cpp  subtitleUtil.cpp  utility.cpp
source/video_player/: video_decoder.cpp  video_player.cpp
